2010-10-20  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: TEXT type for some fields
	with small length now with the HTML encoding.

2010-10-20  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/servers/modificar_server.php: Disable change name of server
	because it will be trouble updating server status.

	Fixes: #3091297

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed jquery clone 
	function incompatibility with iexplorer for bug 3090389

2010-10-20  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php: Improved template
	selection to be selected more than one. Added agent selection. (It can
	also be selected more than one.)

	* godmode/include/functions_alerts.php: Added a argument, $id_agents
	array, to get_agents_with_alert_template(). It is used to select
	specific agents in the function.

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php
	godmode/reporting/visual_console_builder.php: Added the html support
	in the label type items of the visual consoles for pending
	task 3063404

2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: added hook for "user translation" in function
	"__".
	
	Pending task: #3057674

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed a jquery typo
	for iexplorer browser

2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "safe_input" when the
	parameter is a array.

2010-10-18  Sancho Lerena <slerena@artica.es>
	
	* pandoradb.sql: Alter some trecon_task info to avoid problems on new
	custom script items (due the referencial integrity).
	
	* pandoradb_data.sql: Octopods instead octopus.
	
	* godmode/menu.php,